--- a/Jexpr/Templates/JexprJsGeneratorTemplate.tt
+++ b/Jexpr/Templates/JexprJsGeneratorTemplate.tt
@@ -1,12 +1,12 @@
-﻿<#@ template language="C#" #>
+﻿<#@ template language="C#" visibility="internal" #>
 <#@ assembly name="System.Core" #>
-
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="Jexpr" #>
 <#@ import namespace="Jexpr.Core" #>
 <#@ import namespace="Jexpr.Core.Impl" #>
+
 function ExpFunc(parametersJson) {
 
 	var p = JSON.parse(parametersJson);
@@ -23,7 +23,7 @@ function ExpFunc(parametersJson) {
 	 #>
 
 	 <# /* BODY START */ #>
-	if (<#= !string.IsNullOrEmpty(jshasPExprsBody) ?jshasPExprsBody :"true" #>){
+	if (<#= !string.IsNullOrEmpty(jshasPExprsBody) ? jshasPExprsBody :"true" #>){
 		<# 
 		   var hasntPExprs = concatService.ConcatCompiledExpressions(expressionGroup.Items.Where(expression => !expression.HasPriority).ToList(), expressionGroup.Operator);
 		   var jshasntPExprsBody = concatService.ConcatJsExpressionBody(this.ExpressionMetadata.Operator, hasntPExprs);
