--- a/Jexpr/Templates/JexprJsGeneratorTemplate.tt
+++ b/Jexpr/Templates/JexprJsGeneratorTemplate.tt
@@ -5,6 +5,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="Jexpr" #>
 <#@ import namespace="Jexpr.Core" #>
+<#@ import namespace="Jexpr.Models" #>
 <#@ import namespace="Jexpr.Core.Impl" #>
 
 function ExpFunc(parametersJson) {
@@ -18,14 +19,14 @@ function ExpFunc(parametersJson) {
 	<#
 		var expressionGroup = this.ExpressionMetadata.Items.First();
 		//Priority = true
-		var hasPExprs = concatService.ConcatCompiledExpressions(expressionGroup.Items.Where(expression => expression.HasPriority).ToList(), expressionGroup.Operator);
+		var hasPExprs = concatService.ConcatCompiledExpressions(expressionGroup.Criteria.Where(expression => expression.HasPriority).ToList(), expressionGroup.Operator);
 		var jshasPExprsBody = concatService.ConcatJsExpressionBody(this.ExpressionMetadata.Operator, hasPExprs);
 	 #>
 
 	 <# /* BODY START */ #>
 	if (<#= !string.IsNullOrEmpty(jshasPExprsBody) ? jshasPExprsBody :"true" #>){
 		<# 
-		   var hasntPExprs = concatService.ConcatCompiledExpressions(expressionGroup.Items.Where(expression => !expression.HasPriority).ToList(), expressionGroup.Operator);
+		   var hasntPExprs = concatService.ConcatCompiledExpressions(expressionGroup.Criteria.Where(expression => !expression.HasPriority).ToList(), expressionGroup.Operator);
 		   var jshasntPExprsBody = concatService.ConcatJsExpressionBody(this.ExpressionMetadata.Operator, hasntPExprs);
 		 #>
 		 <# if (this.ExpressionMetadata.ResultExpression == null){ #>
@@ -41,7 +42,7 @@ function ExpFunc(parametersJson) {
 
 		<# 
 		var resultExpGroup = this.ExpressionMetadata.ResultExpression.First();
-		var resultExp = resultExpGroup.Items.First();
+		var resultExp = resultExpGroup.Criteria.First();
 		string resultExpJs = builder.BuildFrom(resultExp);
 		 #>
 
